# raytracing

./: .gitignore  CMakeLists.txt
apps/: CMakeLists.txt  main.cpp  part10.cpp  part4.cpp  part5.cpp  part6.cpp  part7.cpp  part8.cpp  part9.cpp
include/rtow/: camera.h  camera.hpp  color.h  hit_record.hpp  hittable.hpp  image.h  material.hpp  matrix.hpp  matrix_utils.hpp  pose.hpp  ray.hpp  sphere.hpp  utils.hpp  vec.hpp  vec3.h  vec3.hpp  vec3_utils.hpp  vec_utils.hpp
src/: color.cpp  image.cpp
test/: test_matrix.cpp  test_vec3.cpp
