add_executable(part2 part2.cpp)
target_link_libraries(part2 rtow pthread)
set_property(TARGET part2 PROPERTY CXX_STANDARD 20)

add_executable(part4 part4.cpp)
target_link_libraries(part4 rtow pthread)
set_property(TARGET part4 PROPERTY CXX_STANDARD 20)

add_executable(part6 part6.cpp)
target_link_libraries(part6 rtow pthread)
set_property(TARGET part6 PROPERTY CXX_STANDARD 20)

add_executable(part7 part7.cpp)
target_link_libraries(part7 rtow pthread)
set_property(TARGET part7 PROPERTY CXX_STANDARD 20)

add_executable(part8 part8.cpp)
target_link_libraries(part8 rtow pthread)
set_property(TARGET part8 PROPERTY CXX_STANDARD 20)